--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <header>
       <h2>俺のメモ帳</h2>
       <% if user_signed_in? %>
+        <p><%= current_user.name %></p>
         <p>新規メモ作成</p>
         <p><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></p>
       <% else %>
