--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <h2>俺のメモ帳</h2>
       <% if user_signed_in? %>
         <p><%= current_user.name %></p>
-        <p>新規メモ作成</p>
+        <p><%= link_to '新規メモ作成', new_memo_path %></p>
         <p><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></p>
       <% else %>
         <p><%= link_to '新規登録', new_user_registration_path %></p>
