--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -1,6 +1,6 @@
 <% @memos.each do |memo| %>
   <div>
-    <p><%= memo.title %></p>
+    <p><%= link_to memo.title, memo_path(memo.id) %></p>
     <p><%= memo.created_at %></p>
   </div>
 <% end %>
