--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -1,6 +1,7 @@
 <% if current_user.id == @memo.user.id %>
   <div>
-    <p><%= link_to '編集', edit_memo_path %></p>
+    <p><%= link_to '編集', edit_memo_path, class: "btn btn-success" %></p>
+    <p><%= link_to '削除', memo_path(@memo.id), method: :delete, data: {confirm: '削除します。よろしいですか？', cancel: 'キャンセル', commit: '削除する'}, title: '削除確認' %></p>
 </div>
 <% end %>
 <table>
