--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: @memo, local: true) do |f| %>
+  <%= render 'layouts/error_messages', model: f.object %>
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title, autofucus: true %>
