--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.id == @memo.user.id %>
   <div>
     <p><%= link_to '編集', edit_memo_path, class: "btn btn-success" %></p>
-    <p><%= link_to '削除', memo_path(@memo.id), method: :delete, data: {confirm: '削除します。よろしいですか？', cancel: 'キャンセル', commit: '削除する'}, title: '削除確認' %></p>
+    <p><%= link_to '削除', memo_path(@memo.id), method: :delete, data: {confirm: '削除します。よろしいですか？', cancel: 'キャンセル', commit: '削除する'}, title: '削除確認', class: "btn" %></p>
 </div>
 <% end %>
 <table>
@@ -11,7 +11,7 @@
   </tr>
   <tr>
     <th>作成日時</th>
-    <td><%= @memo.created_at %></td>
+    <td><%= l @memo.created_at %></td>
   </tr>
   <tr>
     <th>メモ内容</th>
