--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <p><%= current_user.name %></p>
         <p><%= link_to '新規メモ作成', new_memo_path %></p>
         <p><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></p>
+        <p><%= link_to 'ユーザー情報編集', edit_user_registration_path %>
       <% else %>
         <p><%= link_to '新規登録', new_user_registration_path %></p>
         <p><%= link_to 'ログイン', new_user_session_path %></p>
