--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -17,4 +17,10 @@
     <th>メモ内容</th>
     <td><%= @memo.content %></td>
   </tr>
+  <% if @message.image.atttached? %>
+    <tr>
+      <th>メモ画像</th>
+      <td><%= image_tag @memo.image.variant(resize: '500x500') %></td>
+    </tr>
+  <% end %>
 </table>
