--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -10,6 +10,11 @@
     <%= f.text_area :content, rows: "5" %>
   </div>
 
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :image %>
+  </div>
+
   <div class="actions">
     <%= f.submit "作成" %>
   </div>
