--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -1,8 +1,14 @@
 <% if user_signed_in? %>
+  <h2>今までのメモ</h2>
   <% @memos.each do |memo| %>
-    <div>
-      <p><%= link_to memo.title, memo_path(memo.id) %></p>
-      <p><%= l memo.created_at %></p>
+    <div class="memo">
+      <div class="memo-upper">
+        <span class="memo-title"><%= link_to memo.title, memo_path(memo.id) %></span>
+      </div>
+      <hr>
+      <div class="memo-bottom">
+        <%= l memo.created_at %>
+      </div>
     </div>
   <% end %>
 <% else %>
