--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,7 +8,33 @@
   list-style: none;
   color: inherit;
 }
+h1,h2,h3,h4,h5,h6{
+  padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+/* 入力系 */
+.form-box{
+  border: 1px solid #666;
+  padding: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: white;
+}
+.field{
+  width: 100%;
+  margin: 1% auto 0;
+}
+input,select{
+  width: 50%;
+  padding: 5px;
+}
+.actions{
+  margin-top: 5%;
+}
 .btn{
+  width: 15%;
   border: 1px solid #666;
   border-radius: 5px;
   overflow: hidden;
@@ -21,6 +47,13 @@
   width: 70%;
   margin: 0 auto;
   background-color: white;
+}
+
+/*
+ログイン
+*/
+#user_remember_me{
+  width: auto;
 }
 
 /*
@@ -87,7 +120,6 @@
   margin: 5% auto;
   padding: 1%;
 }
-.memo-upper{}
 .memo-title{
   font-weight: bold;
   font-size: larger;
