--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           </li>
         <% else %>
           <li class="session-btn header-btn btn">
-            <p><%= link_to '新規登録', new_user_registration_path %></p>
+            <%= link_to '新規登録', new_user_registration_path %>
           </li>
           <li class="session-btn header-btn btn">
             <%= link_to 'ログイン', new_user_session_path %>
