--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,13 @@
       <div class="main">
       <%= yield %>
       </div>
-      <% if user_signed_in? %>
-        <%= link_to new_memo_path, class: "new-memo-btn" do %>
-          +
+      <div class="right-btn">
+        <% if user_signed_in? %>
+          <%= link_to new_memo_path, class: "new-memo-btn" do %>
+            +
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
