--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,6 +35,7 @@ input,select{
 }
 .btn{
   width: 15%;
+  color: white;
   border: 1px solid #666;
   border-radius: 5px;
   overflow: hidden;
@@ -47,6 +48,9 @@ input,select{
   width: 70%;
   margin: 0 auto;
   background-color: white;
+}
+a {
+  color: white;
 }
 
 /*
@@ -62,7 +66,7 @@ input,select{
 .header{
   height: 10vh;
   width: 100vw;
-  background-color: #00ffff;
+  background-color: #666;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -83,12 +87,13 @@ input,select{
 }
 .user-name{
   padding: 1%;
+  color: white;
 }
 .session-btn{
-  background-color: #7fffd4;
+  background-color: #666;
 }
 .logout{
-  background-color: white;
+  background-color: #666;
 }
 
 /*
@@ -118,7 +123,7 @@ input,select{
   font-size: large;
   font-weight: bold;
   padding: 1%;
-  background-color: #00ffff;
+  background-color: #666;
   color: white;
 }
 
@@ -142,6 +147,11 @@ input,select{
   font-weight: bold;
   font-size: larger;
 }
+
+.memo-title > a{
+  color: black;
+}
+
 .memo-bottom{
   text-align: right;
 }
@@ -155,8 +165,10 @@ input,select{
   width: 20%;
   margin: 0 0 0 auto;
 }
-.memo-edit-btn,.memo-btn{
-  background-color: #00ffff;
+.memo-edit-btn,.memo-btn,.memo-delete-btn{
+  width: fit-content;
+  color: white;
+  background-color: #666;
 }
 .memo-created-at{
   text-align: right;
