メール本文修正

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -5,12 +5,9 @@
   </head>
   <body>
     <h1><%= @user.name %>様、俺メモへようこそ。</h1>
+    <p>俺メモへのユーザー登録が完了しました。</p>
     <p>
-      俺メモへのサインアップが成功しました。
-      your username is: <%= @user.name %>.<br>
-    </p>
-    <p>
-      このサイトにログインするには、<%= @url %>をクリックしてください。
+      URL:<%= @url %>
     </p>
     <p>ご入会ありがとうございます。どうぞお楽しみくださいませ。</p>
   </body>
