--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,8 +1,8 @@
 <%= @user.name %>様、俺メモへようこそ。
 ==============================================
 
-俺メモへのサインアップが成功しました。ユーザー名は、「<%= @user.name %>」です。
+俺メモへのユーザー登録が完了しました。
 
-このサイトにログインするには、<%= @url %>をクリックしてください。
+URL:<%= @url %>
 
-本サイトにユーザー登録いただきありがとうございます。
+ご入会ありがとうございます。どうぞお楽しみくださいませ。
