アカウント削除モーダル対応・ヘッダーボタン調整

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -13,6 +13,9 @@ h1,h2,h3,h4,h5,h6{
   margin-block-start: 0;
   margin-block-end: 0;
 }
+ul{
+  margin-block: 0;
+}
 /* 入力系 */
 .form-box{
   border: 1px solid #666;
@@ -40,7 +43,7 @@ input,select{
   margin-top: 5%;
 }
 .btn{
-  width: 15%;
+  width: fit-content;
   color: #666;
   border: 1px solid #666;
   border-radius: 5px;
@@ -101,6 +104,10 @@ a {
 }
 .logout{
   background-color: #666;
+}
+.header-icon{
+  width: 35px;
+  height: 35px;
 }
 
 /*
@@ -244,6 +251,15 @@ a {
 
 /* スマホ */
 @media (max-width: 599px) {
+  .header-icon{
+    width: 26px;
+    height: 26px;
+  }
+
+  .header-btn > a{
+    font-size: 10px;
+  }
+
   .memo-btns{
     width: 40%;
   }
