--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.name %>様</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>パスワード再設定のリクエストを承りました。</p>
+<p>下記のリンクより、パスワードを再設定してください。</p>
+<p>リンクの有効期限は1時間です。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワード再設定', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>もし本メールにお心当たりのない場合は、無視していただいて構いません。</p>
