Devise関連入力フォーム調整

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,41 +4,41 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true %>
+      <%= f.text_field :name, autofocus: true, class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :password %> <i>(変更しない場合空欄で構いません)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
       <% if @minimum_password_length %>
         <br />
         <em>最低<%= @minimum_password_length %>文字入力してください。</em>
       <% end %>
     </div>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :current_password %> <i>(変更を適用するには現在のパスワードを入力してください)</i><br />
-      <%= f.password_field :current_password, autocomplete: "current-password" %>
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "更 新", class: "btn" %>
+      <%= f.submit "更 新", class: "btn btn-dark" %>
     </div>
   <% end %>
 
@@ -46,7 +46,7 @@
   <h3>アカウントを削除する</h3>
 
   <%# <%= button_to "アカウント削除", registration_path(resource_name), class: "btn", data: { confirm: "アカウントを削除します。\nこれまでのデータも全て削除されます。\nよろしいですか？" }, method: :delete %>
-  <div id="openModal" class="btn">
+  <div id="openModal" class="btn btn-dark">
     削除
   </div>
 
