--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,21 +5,21 @@
     <%= render "devise/shared/error_messages", resource: resource %>
     <%= f.hidden_field :reset_password_token %>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :password, "新しいパスワード" %><br />
       <% if @minimum_password_length %>
         <em>(最低<%= @minimum_password_length %> 文字入力してください)</em><br />
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :password_confirmation, "新しいパスワード(確認用)" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "パスワードを変更する", class: "btn" %>
+      <%= f.submit "パスワードを変更する", class: "btn btn-dark" %>
     </div>
   <% end %>
 
