--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
-  <h2>今までのメモ</h2>
-  <div class="memos-area">
+  <h2 class="m-2">今までのメモ</h2>
+  <div class="main">
     <% @memos.each do |memo| %>
       <div class="memo">
         <div class="memo-upper">
