--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -1,4 +1,5 @@
-<div class="form-box">
+<h2 class="m-2">新規メモ登録</h2>
+<div class="form-box p-4">
   <%= form_with(model: @memo, local: true) do |f| %>
     <%= render 'layouts/error_messages', model: f.object %>
 
