メモ詳細画面・ユーザー登録画面・ログイン画面・ユーザー編集画面・メモ追加ボタン調整

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="form-box">
-  <h2>新規登録</h2>
+<h2 class="m-2">新規登録</h2>
+<div class="form-box p-4">
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
