--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
       <div class="col-1 position-relative">
         <% if user_signed_in? %>
           <%= link_to new_memo_path, class: "btn btn-dark btn-lg position-absolute top-50 end-50 translate-middle-y" do %>
-            +
+            <i class="bi bi-pencil-square"></i>
           <% end %>
         <% end %>
       </div>
