--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -1,48 +1,51 @@
-<div class="memo-headline">
-  <h2><%= @memo.title %></h2>
-  <div class="memo-created-at"><%= l @memo.created_at %></div>
-  <% if current_user.id == @memo.user.id %>
-    <div class="memo-btns">
-      <%= link_to edit_memo_path, class: "btn btn-dark" do %>
-        編集
-      <% end %>
-      <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#delModal">
-        削除
-      </button>
-    </div>
-  <% end %>
-</div>
-<hr>
-<div class="memo-detail">
-  <%# <%= @memo.content %>
-  <%= safe_join(@memo.content.split("\n"),tag(:br)) %>
-  <div class="memo-image">
-    <% if @memo.image.attached? %>
-      <hr>
-      <%= image_tag @memo.image.variant(resize: '500x500'), class: "memo-img" %>
+<h2 class="m-2"><%= @memo.title %></h2>
+<div class="main">
+  <div class="memo-headline">
+    <div class="memo-created-at"><%= l @memo.created_at %></div>
+    <% if current_user.id == @memo.user.id %>
+      <div class="memo-btns">
+        <%= link_to edit_memo_path, class: "btn btn-dark" do %>
+          <i class="bi bi-pencil-square"></i>編集
+        <% end %>
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#delModal">
+          <i class="bi bi-trash"></i>
+          削除
+        </button>
+      </div>
     <% end %>
   </div>
-</div>
+  <hr>
+  <div class="memo-detail">
+    <%# <%= @memo.content %>
+    <%= safe_join(@memo.content.split("\n"),tag(:br)) %>
+    <div class="memo-image">
+      <% if @memo.image.attached? %>
+        <hr>
+        <%= image_tag @memo.image.variant(resize: '500x500'), class: "memo-img" %>
+      <% end %>
+    </div>
+  </div>
 
-<%# 削除確認モーダルウィンドウ %>
-<div class="modal fade" id="delModal" tabindex="-1" aria-labelledby="delModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="delModalLabel">削除</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        このメモを削除します<br>
-        よろしいですか？
-      </div>
-      <div class="modal-footer">
-        <%= link_to memo_path(@memo.id), class: "btn btn-dark", method: :delete do %>
-          削除する
-        <% end %>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+  <%# 削除確認モーダルウィンドウ %>
+  <div class="modal fade" id="delModal" tabindex="-1" aria-labelledby="delModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="delModalLabel">削除</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          このメモを削除します<br>
+          よろしいですか？
+        </div>
+        <div class="modal-footer">
+          <%= link_to memo_path(@memo.id), class: "btn btn-dark", method: :delete do %>
+            削除する
+          <% end %>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+        </div>
       </div>
     </div>
   </div>
+  <%# 削除確認モーダルウィンドウ %>
 </div>
-<%# 削除確認モーダルウィンドウ %>
