--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="form-box">
-  <h2>ユーザー情報編集 <%= resource_name.to_s.humanize %></h2>
+<h2 class="m-2">ユーザー情報編集 <%= resource_name.to_s.humanize %></h2>
+<div class="form-box p-4">
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -45,10 +45,10 @@
   <hr>
   <h3>アカウントを削除する</h3>
 
-  <%# <%= button_to "アカウント削除", registration_path(resource_name), class: "btn", data: { confirm: "アカウントを削除します。\nこれまでのデータも全て削除されます。\nよろしいですか？" }, method: :delete %>
-  <div id="openModal" class="btn btn-dark">
+  <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#delModal">
+    <i class="bi bi-trash"></i>
     削除
-  </div>
+  </button>
 
   <hr>
   <%= link_to "戻る", :back %>
@@ -73,4 +73,26 @@
       </div>
     </div>
   </section>
+
+  <div class="modal fade" id="delModal" tabindex="-1" aria-labelledby="delModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="delModalLabel">削除</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          アカウントを削除すると<br>
+          これまでのメモもすべて削除されます<br>
+          よろしいですか？
+        </div>
+        <div class="modal-footer">
+          <%= link_to registration_path(resource_name), class: "btn btn-dark", method: :delete do %>
+            削除する
+          <% end %>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <%# 削除確認モーダルウィンドウ %>
