--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,10 +31,10 @@ ul{
   width: 100%;
   margin: 1% auto 0;
 }
-input,select{
+/* input,select{
   width: 50%;
   padding: 5px;
-}
+} */
 .text-area{
   width: 100%;
 }
@@ -44,16 +44,16 @@ input,select{
 .actions{
   margin-top: 5%;
 }
-/* .btn{
+.btn{
   width: fit-content;
-  color: #666;
+  /* color: #666;
   border: 1px solid #666;
-  border-radius: 5px;
+  border-radius: 5px; */
   overflow: hidden;
-  font-weight: bold;
+  /* font-weight: bold;
   padding: 1%;
-  background-color: white;
-} */
+  background-color: white; */
+}
 .grid{
   display: flex;
   justify-content: space-between;
